# traefik-forwardauth-cloudflare-teams

./: .editorconfig  .env.dist  .gitignore  Cargo.toml  Dockerfile  LICENCE.md  README.md  docker-entrypoint.sh  requirements.txt
.github/workflows/: docker-publish.yml
src/: app.rs  cli.rs  error.rs  extract.rs  jwks.rs  main.rs  manage.py  tracing.rs
src/app/: __init__.py  jwt.py  views.py
src/tests/: mod.rs
src/tests/keys/: jwks.json  private.pem
