[package]
name = "traefik-forwardauth-cloudflare-teams"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
axum = { version = "0.6.18", features = ["headers"] }
clap = { version = "4.2.7", features = ["derive", "env"] }
jsonwebtoken = "8.3.0"
reqwest = { version = "0.11.17", features = ["json"] }
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
tokio = { version = "1.28.1", features = ["macros", "rt-multi-thread", "signal"] }
tracing = "0.1.37"
tower-http = { version = "0.4.0", features = ["trace"] }
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }

[dev-dependencies]
tower = { version = "0.4.13", features = ["util"] }
hyper = "0.14.26"
